# tgcli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  hatch_build.py  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/tg_cli/: auth.py  cli.py  client.py  config.py  formatting.py  session.py
src/tgcli/: auth.py  cli.py  client.py  config.py  formatting.py  session.py  update.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_formatting.py  test_session.py  test_update.py
