[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgcli"
version = "0.1.2"
description = "CLI tool to search and read Telegram messages from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Takeshi" }]
keywords = ["telegram", "cli", "search", "messages"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "telethon>=1.42",
    "keyring>=25",
    "rich>=13",
]

[project.urls]
Repository = "https://github.com/takeshi/tgcli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[project.scripts]
tg = "tgcli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tgcli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
