[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgcli"
version = "0.3.4"
description = "CLI tool to search and read Telegram messages from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Takeshi" }]
keywords = ["telegram", "cli", "search", "messages"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "telethon>=1.42",
    "keyring>=25",
    "rich>=13",
]

[project.urls]
Repository = "https://github.com/tksohishi/tgcli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.15",
]

[project.scripts]
tg = "tgcli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tgcli"]

[tool.hatch.build.hooks.custom]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108"]
"hatch_build.py" = ["S603"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
